Fix content overflowing out of cv

--- a/src/styles/cv.scss
+++ b/src/styles/cv.scss
@@ -5,7 +5,7 @@
 
   border: 2px solid #ddd;
   width: 50%;
-  height: 75%;
+  min-height: 75%;
   padding: 1.5rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
